2005-06-10  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* perl/lib/RDF/Redland.pm.in: Use eval to ensure version gets
	turned into a perl version thing like 1.00_02_01 and not a string
	"1.00_02_01".
	Addresses re-opened
	Issue #0000034 - http://bugs.librdf.org/mantis/view.php?id=34

2005-06-07  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* ruby/lib/rdf/redland/node.rb, ruby/lib/rdf/redland/resource.rb,
	ruby/lib/rdf/redland/uri.rb, ruby/lib/rdf/redland.rb: Updates to
	match newer SWIG.  Move constants in rdf/redland.rb to later after
	$world exists.
	Fixes issue #0000031 - http://bugs.librdf.org/mantis/view.php?id=31
	based on attached patch from aredridel.

2005-06-06  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* python/redlandtest.py (testSPARQLQueryAsString): Fix serializing
	query results test to XML result2 format answer.

	* python/RDF.py, perl/lib/RDF/Redland/QueryResults.pm: Use result2
	format by default in query results serializing

	* Makefile.PL: Handle newer configure.ac autoconf versions
	Don't try to cd raptor or cd librdf

	* perl/lib/RDF/Redland.pm.in:
	Moved $VERSION to RDF::Redland package, add _s and leading 0s
	Fixes issue #0000034 - http://bugs.librdf.org/mantis/view.php?id=34

	* configure.ac: Make perl/lib/RDF/Redland.pm from prototype

	* perl/lib/RDF/Makefile.am, perl/lib/RDF/Redland.pm,
	perl/lib/RDF/Redland.pm.in: Rename Redland.pm as Redland.pm.in

	* perl/lib/RDF/Redland/Node.pm:
	Use ISA with 'URI' to catch several classes of perl URI.
	(new_literal): Fix promotion of types, strings to a redland URI.
	Fixes issue #0000033 - http://bugs.librdf.org/mantis/view.php?id=33

2005-06-02  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* configure.ac: Bumped version to 1.0.2.1

2005-06-01  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* python/redland-post.i (librdf_python_reset_callback): Remove
	unused vars
	(librdf_python_logger_handler): use log_msg as arg name to remove
	a warning.

2005-05-29  Dave Beckett  <Dave.Beckett@bristol.ac.uk>