@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="iso-8859-1"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
@@ -9,9 +8,10 @@
 
 <h1>Redland RDF Application Framework Bindings - News</h1>
 
-<h2>2005-??-?? Version 1.0.2.1 Released</h2>
+<h2>2005-06-10 Version 1.0.2.1 Released</h2>
 
-<p>Not yet released.
+<p>Synchronise with Redland 1.0.2<br />
+Some minor fixes in the Perl, Python and Ruby bindings.
 </p>
 
 <p>See the <a href="RELEASE.html#rel1_0_2_1">1.0.2.1 Release Notes</a>
